--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@
                 <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
                 <!-- - header -->
                 <!-- button --><a class="button button_bordered button_black mb-0-5" data-hover="Get in Touch"
-                  href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
+                  href="index.html#contact_us"><span class="button__label-hover">Get in Touch</span></a>
                 <!-- - button -->
               </section>
             </div>
