--- a/product-details.html
+++ b/product-details.html
@@ -632,178 +632,136 @@
         </div>
       </div>
       <!-- How its works -->
-      <!-- PAGE FOOTER -->
-      <footer class="footer container-fluid" id="page-footer" data-arts-theme-text="dark"
-        data-arts-footer-logo="primary">
-        <!-- widgets top area -->
-        <div class="footer__area pt-md-5 pt-sm-3 pb-md-3 pb-sm-1 pt-2 pb-0 footer__area-border-top">
-          <div class="row">
-            <!-- call to action -->
-            <div class="col-lg-5">
-              <section class="widget widget_Once Upon A Time_cta">
-                <!-- header -->
-                <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
-                <!-- - header -->
-                <!-- button --><a class="button button_solid button_black mb-0-5" data-hover="Get in Touch"
-                  href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
-                <!-- - button -->
-              </section>
-            </div>
-            <!-- - call to action -->
-            <div class="col-lg-7">
-              <div class="row justify-content-lg-between">
-                <!-- widget MENU #1 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">2020' Works</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-1-fullscreen-center.html">Nordic Adventure</a>
-                      </li>
-                      <li><a href="project-details-2-bottom-center.html">Sunrise in Desert</a>
-                      </li>
-                      <li><a href="project-details-3-halfscreen-left-right.html">Cassio Apartment</a>
-                      </li>
-                      <li><a href="project-details-4-halfscreen-left-left.html">Nothern Wave</a>
-                      </li>
-                      <li><a href="project-details-5-bottom-container-center.html">On the Edge</a>
-                      </li>
-                      <li><a href="project-details-6-bottom-fullwidth.html">Paysage Fiction</a>
-                      </li>
-                      <li><a href="project-details-7-fullscreen-left.html">Silence &amp; Noise</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #1 -->
-                <!-- widget MENU #2 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">2019' Works</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-8-halfscreen-right-left.html">Minimalex Cosmetics</a>
-                      </li>
-                      <li><a href="project-details-9-fullscreen-center.html">La Isla Bonita</a>
-                      </li>
-                      <li><a href="project-details-10-halfscreen-left-right.html">Kinsey Premium Furniture</a>
-                      </li>
-                      <li><a href="project-details-11-fullscreen-center.html">Dancing in the Dark</a>
-                      </li>
-                      <li><a href="project-details-12-bottom-container-center.html">The Silent Listener</a>
-                      </li>
-                      <li><a href="project-details-13-bottom-container-center.html">Arrigo Casual Accessories</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #2 -->
-                <!-- widget MENU #3 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">Services</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="#">Weddings</a>
-                      </li>
-                      <li><a href="#">Portraits</a>
-                      </li>
-                      <li><a href="#">Commercial</a>
-                      </li>
-                      <li><a href="#">Studio</a>
-                      </li>
-                      <li><a href="#">Reportages</a>
-                      </li>
-                      <li><a href="#">Corporate</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #3 -->
-                <!-- widget MENU #4 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">Studio</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="page-inner-services-1.html">Services</a>
-                      </li>
-                      <li><a href="page-inner-about-1.html">About</a>
-                      </li>
-                      <li><a href="blog-grid-2-columns.html">Blog</a>
-                      </li>
-                      <li><a href="page-inner-contacts-1.html">Contacts</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #4 -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- - widgets top area -->
-        <!-- widgets bottom area -->
-        <div class="footer__area footer__area-border-top pt-sm-3 pb-sm-1 pt-2 pb-0">
-          <div class="row align-items-center">
-            <!-- widget LOGO -->
-            <div class="col-lg-3 footer__column text-center text-lg-left order-lg-1">
-              <section class="widget widget_Once Upon A Time_logo">
-                <!-- content --><a class="logo" href="index.html">
-                  <div class="logo__wrapper-img">
-                    <!-- primary logo version (for light backgrounds)--><img class="logo__img-primary"
-                      src="img/general/logo_green.svg" alt="Once Upon A Time HTML5 Template" height="20" />
-                    <!-- secondary logo version (for dark backgrounds)--><img class="logo__img-secondary"
-                      src="img/general/logo_light.svg" alt="Once Upon A Time HTML5 Template" height="20" />
-                  </div>
-                </a>
-                <!-- - content -->
-              </section>
-            </div>
-            <!-- - widget LOGO -->
-            <!-- widget SOCIAL -->
-            <div class="col-lg-3 footer__column text-center text-lg-right order-lg-3">
-              <section class="widget widget_Once Upon A Time_social">
-                <!-- content -->
-                <ul class="social">
-                  <li class="social__item"><a class="fa fa-facebook-f" href="#"></a></li>
-                  <li class="social__item"><a class="fa fa-twitter" href="#"></a></li>
-                  <li class="social__item"><a class="fa fa-instagram" href="#"></a></li>
-                  <li class="social__item"><a class="fa fa-behance" href="#"></a></li>
-                </ul>
-                <!-- - content -->
-              </section>
-            </div>
-            <!-- - widget SOCIAL -->
-            <!-- widget TEXT -->
-            <div class="col-lg-6 footer__column text-center text-lg-center order-lg-2">
-              <section class="widget widget_text">
-                <!-- content -->
-                <div class="textwidget">
-                  <p><small>Copyrights© 2025 Once Upon A Time Crafted by <a href="#" target="_blank">OUAT</a></small>
-                  </p>
-                </div>
-                <!-- - content -->
-              </section>
-            </div>
-            <!-- - widget TEXT -->
-          </div>
-        </div>
-        <!-- - widgetst bottom area -->
-      </footer>
-      <!-- - PAGE FOOTER -->
+     <!-- PAGE FOOTER -->
+     <footer class="footer container-fluid" id="page-footer" data-arts-theme-text="dark"
+     data-arts-footer-logo="primary">
+     <!-- widgets top area -->
+     <div class="footer__area pt-md-5 pt-sm-3 pb-md-3 pb-sm-1 pt-2 pb-0">
+       <div class="row">
+         <!-- call to action -->
+         <div class="col-lg-4">
+           <section class="widget widget_Once Upon A Time_cta">
+             <!-- header -->
+             <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
+             <!-- - header -->
+             <!-- button --><a class="button button_bordered button_black mb-0-5" data-hover="Get in Touch"
+               href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
+             <!-- - button -->
+           </section>
+         </div>
+         <!-- - call to action -->
+         <div class="col-lg-8">
+           <div class="row justify-content-lg-between">
+             <!-- widget MENU #1 -->
+             <div class="col-lg-6 col-sm-6 col-12">
+               <section class="widget widget_nav_menu">
+                 <!-- header -->
+                 <h2 class="widgettitle">About us</h2>
+                 <!-- - header -->
+                 <!-- content -->
+                 <p class="quick_intro">"Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks. <br><br> <b>We’re not just printing books: we’re weaving magic.</b></p>
+                 <!-- - content -->
+               </section>
+              
+             </div>
+             <!-- - widget MENU #1 -->
+             <!-- widget MENU #2 -->
+             <div class="col-lg-3 col-sm-6 col-12">
+               <section class="widget widget_nav_menu">
+                 <!-- header -->
+                 <h2 class="widgettitle">Quick Links</h2>
+                 <!-- - header -->
+                 <!-- content -->
+                 <ul class="menu js-menu d-flex flex-column">
+                   <li><a href="index.html">Home</a>
+                   </li>
+                   <li><a href="product-list.html">Products</a>
+                   </li>
+                   <li><a href="#hiw">How it works</a>
+                   </li>
+                   <li><a href="faq.html">FAQs</a>
+                   </li>
+                   <li><a href="#review">Customer Reviews</a>
+                   </li>
+                 </ul>
+                 <!-- - content -->
+               </section>
+             </div>
+             <!-- - widget MENU #2 -->
+             <!-- widget MENU #3 -->
+             <div class="col-lg-3 col-sm-6 col-12">
+               <section class="widget widget_nav_menu">
+                 <!-- header -->
+                 <h2 class="widgettitle">Others</h2>
+                 <!-- - header -->
+                 <!-- content -->
+                 <ul class="menu js-menu">
+                   <li><a href="terms-of-service.html">Terms of service</a>
+                   </li>
+                   <li><a href="privacy-policy.html">Privacy Policy</a>
+                   </li>
+                 </ul>
+                 <!-- - content -->
+               </section>
+             </div>
+             <!-- - widget MENU #3 -->
+             <!-- widget MENU #4 -->
+           
+             <!-- - widget MENU #4 -->
+           </div>
+         </div>
+       </div>
+     </div>
+     <!-- - widgets top area -->
+     <!-- widgets bottom area -->
+     <div class="footer__area footer__area-border-top pt-sm-3 pb-sm-1 pt-2 pb-0">
+       <div class="row align-items-center">
+         <!-- widget LOGO -->
+         <div class="col-lg-3 footer__column text-center text-lg-left order-lg-1">
+           <section class="widget widget_Once Upon A Time_logo">
+             <!-- content --><a class="logo" href="index.html">
+               <div class="logo__wrapper-img">
+                 <!-- primary logo version (for light backgrounds)--><img class="logo__img-primary"
+                   src="img/general/logo_green.svg" alt="Once Upon A Time HTML5 Template" height="20" />
+                 <!-- secondary logo version (for dark backgrounds)--><img class="logo__img-secondary"
+                   src="img/general/logo_light.svg" alt="Once Upon A Time HTML5 Template" height="20" />
+               </div>
+             </a>
+             <!-- - content -->
+           </section>
+         </div>
+         <!-- - widget LOGO -->
+         <!-- widget SOCIAL -->
+         <div class="col-lg-3 footer__column text-center text-lg-right order-lg-3">
+           <section class="widget widget_Once Upon A Time_social">
+             <!-- content -->
+             <ul class="social">
+               <li class="social__item"><a class="fa fa-facebook-f" href="#"></a></li>
+               <li class="social__item"><a class="fa fa-twitter" href="#"></a></li>
+               <li class="social__item"><a class="fa fa-instagram" href="#"></a></li>
+               <li class="social__item"><a class="fa fa-behance" href="#"></a></li>
+             </ul>
+             <!-- - content -->
+           </section>
+         </div>
+         <!-- - widget SOCIAL -->
+         <!-- widget TEXT -->
+         <div class="col-lg-6 footer__column text-center text-lg-center order-lg-2">
+           <section class="widget widget_text">
+             <!-- content -->
+             <div class="textwidget">
+               <p><small>Copyrights© 2025 Once Upon A Time Crafted by <a href="#" target="_blank">OUAT</a></small>
+               </p>
+             </div>
+             <!-- - content -->
+           </section>
+         </div>
+         <!-- - widget TEXT -->
+       </div>
+     </div>
+     <!-- - widgetst bottom area -->
+   </footer>
+   <!-- - PAGE FOOTER -->
     </div>
     <!-- - PAGE MAIN -->
   </div>
