--- a/aboutus.html
+++ b/aboutus.html
@@ -197,19 +197,19 @@
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#ourproducts"
+            <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#hiw"
+            <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
+            <li class="menu-item-has-children"><a class="h2" href="faq.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
@@ -323,7 +323,7 @@
                 <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
                 <!-- - header -->
                 <!-- button --><a class="button button_bordered button_black mb-0-5" data-hover="Get in Touch"
-                  href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
+                  href="index.html#contact_us"><span class="button__label-hover">Get in Touch</span></a>
                 <!-- - button -->
               </section>
             </div>
