--- a/how_it_works.html
+++ b/how_it_works.html
@@ -542,68 +542,52 @@
       <footer class="footer container-fluid" id="page-footer" data-arts-theme-text="dark"
         data-arts-footer-logo="primary">
         <!-- widgets top area -->
-        <div class="footer__area pt-md-5 pt-sm-3 pb-md-3 pb-sm-1 pt-2 pb-0 footer__area-border-top">
+        <div class="footer__area pt-md-5 pt-sm-3 pb-md-3 pb-sm-1 pt-2 pb-0">
           <div class="row">
             <!-- call to action -->
-            <div class="col-lg-5">
+            <div class="col-lg-4">
               <section class="widget widget_Once Upon A Time_cta">
                 <!-- header -->
                 <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
                 <!-- - header -->
-                <!-- button --><a class="button button_solid button_black mb-0-5" data-hover="Get in Touch"
-                  href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
+                <!-- button --><a class="button button_bordered button_black mb-0-5" data-hover="Get in Touch"
+                  href="index.html#contact_us"><span class="button__label-hover">Get in Touch</span></a>
                 <!-- - button -->
               </section>
             </div>
             <!-- - call to action -->
-            <div class="col-lg-7">
+            <div class="col-lg-8">
               <div class="row justify-content-lg-between">
                 <!-- widget MENU #1 -->
-                <div class="col-lg-3 col-sm-6 col-12">
+                <div class="col-lg-6 col-sm-6 col-12">
                   <section class="widget widget_nav_menu">
                     <!-- header -->
-                    <h2 class="widgettitle">2020' Works</h2>
+                    <h2 class="widgettitle">About us</h2>
                     <!-- - header -->
                     <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-1-fullscreen-center.html">Nordic Adventure</a>
-                      </li>
-                      <li><a href="project-details-2-bottom-center.html">Sunrise in Desert</a>
-                      </li>
-                      <li><a href="project-details-3-halfscreen-left-right.html">Cassio Apartment</a>
-                      </li>
-                      <li><a href="project-details-4-halfscreen-left-left.html">Nothern Wave</a>
-                      </li>
-                      <li><a href="project-details-5-bottom-container-center.html">On the Edge</a>
-                      </li>
-                      <li><a href="project-details-6-bottom-fullwidth.html">Paysage Fiction</a>
-                      </li>
-                      <li><a href="project-details-7-fullscreen-left.html">Silence &amp; Noise</a>
-                      </li>
-                    </ul>
+                    <p class="quick_intro">"Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks. <br><br> <b>We’re not just printing books: we’re weaving magic.</b></p>
                     <!-- - content -->
                   </section>
+                 
                 </div>
                 <!-- - widget MENU #1 -->
                 <!-- widget MENU #2 -->
                 <div class="col-lg-3 col-sm-6 col-12">
                   <section class="widget widget_nav_menu">
                     <!-- header -->
-                    <h2 class="widgettitle">2019' Works</h2>
+                    <h2 class="widgettitle">Quick Links</h2>
                     <!-- - header -->
                     <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-8-halfscreen-right-left.html">Minimalex Cosmetics</a>
+                    <ul class="menu js-menu d-flex flex-column">
+                      <li><a href="index.html">Home</a>
                       </li>
-                      <li><a href="project-details-9-fullscreen-center.html">La Isla Bonita</a>
+                      <li><a href="product-list.html">Products</a>
                       </li>
-                      <li><a href="project-details-10-halfscreen-left-right.html">Kinsey Premium Furniture</a>
+                      <li><a href="#hiw">How it works</a>
                       </li>
-                      <li><a href="project-details-11-fullscreen-center.html">Dancing in the Dark</a>
+                      <li><a href="faq.html">FAQs</a>
                       </li>
-                      <li><a href="project-details-12-bottom-container-center.html">The Silent Listener</a>
-                      </li>
-                      <li><a href="project-details-13-bottom-container-center.html">Arrigo Casual Accessories</a>
+                      <li><a href="#review">Customer Reviews</a>
                       </li>
                     </ul>
                     <!-- - content -->
@@ -614,21 +598,13 @@
                 <div class="col-lg-3 col-sm-6 col-12">
                   <section class="widget widget_nav_menu">
                     <!-- header -->
-                    <h2 class="widgettitle">Services</h2>
+                    <h2 class="widgettitle">Others</h2>
                     <!-- - header -->
                     <!-- content -->
                     <ul class="menu js-menu">
-                      <li><a href="#">Weddings</a>
+                      <li><a href="terms-of-service.html">Terms of service</a>
                       </li>
-                      <li><a href="#">Portraits</a>
-                      </li>
-                      <li><a href="#">Commercial</a>
-                      </li>
-                      <li><a href="#">Studio</a>
-                      </li>
-                      <li><a href="#">Reportages</a>
-                      </li>
-                      <li><a href="#">Corporate</a>
+                      <li><a href="privacy-policy.html">Privacy Policy</a>
                       </li>
                     </ul>
                     <!-- - content -->
@@ -636,25 +612,7 @@
                 </div>
                 <!-- - widget MENU #3 -->
                 <!-- widget MENU #4 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">Studio</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="page-inner-services-1.html">Services</a>
-                      </li>
-                      <li><a href="page-inner-about-1.html">About</a>
-                      </li>
-                      <li><a href="blog-grid-2-columns.html">Blog</a>
-                      </li>
-                      <li><a href="page-inner-contacts-1.html">Contacts</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
+              
                 <!-- - widget MENU #4 -->
               </div>
             </div>
