--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
                   <img src="img/general/icon_logo.png" alt="">
-                  <h1 class="h1 mt-0 mb-0" style="color: #fff;">Once Upon A time</h1>
+                  <h1 class="h1 mt-0 mb-0 cochin-font" style="color: #fff;">Once Upon A time</h1>
                 </div>
                 <h4 class="text-white h4 cochin-font">Preserving life’s most treasured moments <br> in beautifully crafted legacy books.</h4>
                 <!-- <div class="w-100"> <img src="img/general/tag_line.svg" alt=""></div> -->
@@ -503,7 +503,7 @@
           <div class="container-fluid">
             <div class="row justify-content-center align-items-center section pb-2">
               <div class="col-12 col-lg-auto">
-                <h2 class="h2 mt-2 mb-0 text-primary minerva-font">Why Stories Matter</h2>
+                <h2 class="h2 mt-2 mb-0 text-primary">Why Stories Matter</h2>
                 <div class="w-100"></div>
                 <div class="section__headline mx-auto bg-primary"></div>
               </div>
@@ -696,7 +696,7 @@
               <div class="col-lg-8">
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <h2 class="mt-0 mb-0 h2">The Experience we provide</h2>
+                  <h2 class="mt-0 mb-0 h2 text-primary">The Experience we provide</h2>
                 </div>
                 <div class="w-100"></div>
                 <div class="section__headline mx-auto"></div>
