--- a/index.html
+++ b/index.html
@@ -453,13 +453,13 @@
                       <div class="w-100"></div>
                       <div class="section-content__heading split-text js-split-text" data-split-text-type="lines,words"
                         data-split-text-set="words">
-                        <h2 class="text-primary h2">Once Upon a Time</h2>
+                        <h2 class="text-primary h2 cochin-font">Once Upon a Time</h2>
                       </div>
                       <div class="w-100"></div>
-                      <div class="section-content__text split-text js-split-text mt-1 " data-split-text-type="lines"
+                      <div class="section-content__text split-text js-split-text mt-1 cochin-font" data-split-text-type="lines"
                         data-split-text-set="lines">
-                        <p class="text-primary">Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks.</p>
-                         <b class="text-primary"><i> We’re not just printing books: we’re weaving magic.</i></b><p class="text-primary">Using technology and the art of storytelling, including guided prompts and AI assistance, we capture the laughter, wisdom, and unique journeys that shape a life, creating resonant treasures for anyone, for generations.</p>
+                        <p class="text-primary" style="font-size: 1rem;">Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks.</p>
+                         <b class="text-primary" style="font-size: 1rem;"><i> We’re not just printing books: we’re weaving magic.</i></b><p class="text-primary" style="font-size: 1rem;">Using technology and the art of storytelling, including guided prompts and AI assistance, we capture the laughter, wisdom, and unique journeys that shape a life, creating resonant treasures for anyone, for generations.</p>
                       </div>
                       <div class="w-100"></div>
 
@@ -682,7 +682,7 @@
   
               </div>
             </div>
-            <div class="col-12 px-5 text-accent"><p class="text-accent" style="font-family: cursive;">Preserving life’s most treasured moments in beautifully crafted legacy books.</p></div>
+            <div class="col-12 px-5 text-accent Falidasi"><p class="text-accent" style="font-family: cursive;">Preserving life’s most treasured moments in beautifully crafted legacy books.</p></div>
             
           </div>
         </section>
