--- a/aboutus.html
+++ b/aboutus.html
@@ -193,19 +193,19 @@
           <ul class="menu-overlay js-menu-overlay">
             <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matter
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Our Books
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How It Works
                 </div>
               </a>
             </li>
@@ -353,13 +353,13 @@
                     <ul class="menu js-menu d-flex flex-column">
                       <li><a href="index.html">Home</a>
                       </li>
-                      <li><a href="product-list.html">Products</a>
+                      <li><a href="product-list.html">Choose Your Book</a>
                       </li>
-                      <li><a href="#hiw">How it works</a>
+                      <li><a href="how_it_works.html">How It Works</a>
                       </li>
                       <li><a href="faq.html">FAQs</a>
                       </li>
-                      <li><a href="#review">Customer Reviews</a>
+                      <li><a href="index.html#review">Customer Reviews</a>
                       </li>
                     </ul>
                     <!-- - content -->
