--- a/faq.html
+++ b/faq.html
@@ -242,19 +242,19 @@
           <ul class="menu-overlay js-menu-overlay">
             <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matter
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="index.html#ourproducts"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Our Books
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="index.html#hiw"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How It Works
                 </div>
               </a>
             </li>
