--- a/product-details.html
+++ b/product-details.html
@@ -242,19 +242,19 @@
           <ul class="menu-overlay js-menu-overlay">
             <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matter
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Our Books
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How It Works
                 </div>
               </a>
             </li>
@@ -570,7 +570,7 @@
           </div>
         </div>
       </main>
-      <!-- How it works -->
+      <!-- How It Works -->
       <div class="container-fluid hiw_bg">
         <div class="row">
           <!-- section MASTHEAD -->
@@ -582,7 +582,7 @@
                   <div class="col-lg-8">
                     <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                       data-split-text-set="words">
-                      <h2 class="mt-0 mb-0 h2 text-white">How it works</h2>
+                      <h2 class="mt-0 mb-0 h2 text-white">How It Works</h2>
                     </div>
                     <div class="w-100"></div>
                     <div class="section__headline mx-auto"></div>
@@ -593,7 +593,7 @@
           </div>
           <!-- - section MASTHEAD -->
         </div>
-        <div class="row px-5 pb-5">
+        <div class="row px-5 pb-5 justify-content-center">
           <div class="col-md-4 col-12">
             <div class="hiw_content">
               <h2>1.</h2>
@@ -609,7 +609,7 @@
           <div class="col-md-4 col-12">
             <div class="hiw_content">
               <h2>3.</h2>
-              <p>Edit and Design <br> Be Your Story Buddy</p>
+              <p>Let Our AI <br> Be Your Story Buddy</p>
             </div>
           </div>
           <div class="col-md-4 col-12">
@@ -624,7 +624,7 @@
               <p>Get Your <br> Forever Book!</p>
             </div>
           </div>
-          <div class="col-md-4 col-12 d-flex align-items-center justify-content-center">
+          <div class="hiw-learn-more-btn d-flex align-items-center justify-content-center">
             <a class="button button_bordered button_white mb-0-5" data-hover="Learn More"
               href="how_it_works.html"><span class="button__label-hover">Learn More</span></a>
           </div>
@@ -673,17 +673,17 @@
                  <!-- - header -->
                  <!-- content -->
                  <ul class="menu js-menu d-flex flex-column">
-                   <li><a href="index.html">Home</a>
-                   </li>
-                   <li><a href="product-list.html">Products</a>
-                   </li>
-                   <li><a href="#hiw">How it works</a>
-                   </li>
-                   <li><a href="faq.html">FAQs</a>
-                   </li>
-                   <li><a href="#review">Customer Reviews</a>
-                   </li>
-                 </ul>
+                  <li><a href="index.html">Home</a>
+                  </li>
+                  <li><a href="product-list.html">Choose Your Book</a>
+                  </li>
+                  <li><a href="how_it_works.html">How It Works</a>
+                  </li>
+                  <li><a href="faq.html">FAQs</a>
+                  </li>
+                  <li><a href="index.html#review">Customer Reviews</a>
+                  </li>
+                </ul>
                  <!-- - content -->
                </section>
              </div>
