--- a/product-list.html
+++ b/product-list.html
@@ -244,19 +244,19 @@
           <ul class="menu-overlay js-menu-overlay">
             <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matter
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Our Books
                 </div>
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How It Works
                 </div>
               </a>
             </li>
@@ -340,7 +340,7 @@
                 <div class="w-100"></div>
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <h1 class="h1 mt-0 mb-0">Our Products
+                  <h1 class="h1 mt-0 mb-0">Choose Your Book
                   </h1>
                 </div>
                 <div class="w-100"></div>
@@ -598,13 +598,13 @@
                         <ul class="menu js-menu d-flex flex-column">
                           <li><a href="index.html">Home</a>
                           </li>
-                          <li><a href="product-list.html">Products</a>
+                          <li><a href="product-list.html">Choose Your Book</a>
                           </li>
-                          <li><a href="#hiw">How it works</a>
+                          <li><a href="how_it_works.html">How It Works</a>
                           </li>
                           <li><a href="faq.html">FAQs</a>
                           </li>
-                          <li><a href="#review">Customer Reviews</a>
+                          <li><a href="index.html#review">Customer Reviews</a>
                           </li>
                         </ul>
                         <!-- - content -->
