contact us page update

--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,7 @@
           <div class="about_us section">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-md-6 col-12 px-0">
+                <div class="col-md-8 col-lg-6 col-12 px-0">
                   <div class="about_us_content">
 
                     <div class="green-box"></div>
@@ -1572,13 +1572,13 @@
         </section>
        
         <!-- section CONTACTS 3 COLUMNS -->
-        <section class="section section-fullheight pt-5" id="contact_us">
+        <section class="section section-fullheight" id="contact_us">
           <div class="section-fullheight__inner">
             <div class="container-fluid no-gutters h-100">
               <div class="row no-gutters h-100">
                 <!-- section IMAGE -->
                 <div class="col-lg-6 col-12 order-lg-1"> 
-                  <div class="lazy-bg" data-src="img/assets/sectionContacts/img-1.jpg" style="background-position: center; background-size: contain;"></div>
+                  <div class="lazy-bg" data-src="img/assets/sectionContacts/img-1.jpg" style="background-position: center; background-size: cover;height: 100vh;"></div>
 
                 </div>
                 <!-- - section IMAGE -->
